# quizzler-app

./: README.md  main.py  pyproject.toml  quiz_brain.py
quizzler_app/: art.py  data.py  main.py  quiz_brain.py  ui.py
