[tool.poetry]
name = "quizzler-app"
version = "0.1.0"
description = "An object-oriented quiz app that contains 10 questions on random topics for the user to answer with True or False."
license = "MIT"
authors = ["Igor Ferreira <iferreira.n01@gmail.com>"]
readme = "README.md"
packages = [{include = "quizzler_app"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
